Additional explanation for question 4.

--- a/titanic-exploration/titanic_survival_exploration.ipynb
+++ b/titanic-exploration/titanic_survival_exploration.ipynb
@@ -505,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predictions_1(data):\n",
@@ -602,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predictions_2(data):\n",
@@ -756,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *81.14%*"
+    "**Answer**: *81.14%* Having already known that gender and age were a good predictors I wanted to see if I could further refine those 2 features. I noticed that passengers in class 3 typically didn't survive regardless of gender so I added a condition to ensure people weren't in class 3. I also noticed from the visualization that passengers who had number of siblings/spouse >= 4 typically didn't survive as well, therefore I add a condition to ensure SibSp was less than 4. Adding these 2 conditions allowed me to reach an accuracy of 81.14%."
    ]
   },
   {
