--- a/boston-house-prices/boston_housing.ipynb
+++ b/boston-house-prices/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,25 +102,25 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = prices.min()\n",
+    "minimum_price = np.min(prices)\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices)\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices)\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** For the model with max_depth = 3, it appears the testing and training curves have converge around a score of 0.8. It would seem that at around 300 training points neigher curve is changing much therefore it seems uncecessary to add more training points. It could be good to add more training points if the current training data is not fully representative of future data. But adding more training data will take longer to train the data and the more training data added increases the possiblity of having the model overfit at a certain point."
+    "**Answer: ** For the model with max_depth = 3, it appears the testing and training curves have converge around a score of 0.8. It would seem that at around 300 training points neigher curve is not changing much therefore it seems uncecessary to add more training points. As the testing and training score have converged to optimal score more data would be uneccessary as it would take longer to train on more data and the cost of collecting more data would increase as well."
    ]
   },
   {
@@ -524,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
@@ -661,15 +663,151 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>489.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.240288</td>\n",
+       "      <td>12.939632</td>\n",
+       "      <td>18.516564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.643650</td>\n",
+       "      <td>7.081990</td>\n",
+       "      <td>2.111268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.561000</td>\n",
+       "      <td>1.980000</td>\n",
+       "      <td>12.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.370000</td>\n",
+       "      <td>17.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.185000</td>\n",
+       "      <td>11.690000</td>\n",
+       "      <td>19.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.575000</td>\n",
+       "      <td>17.120000</td>\n",
+       "      <td>20.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8.398000</td>\n",
+       "      <td>37.970000</td>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               RM       LSTAT     PTRATIO\n",
+       "count  489.000000  489.000000  489.000000\n",
+       "mean     6.240288   12.939632   18.516564\n",
+       "std      0.643650    7.081990    2.111268\n",
+       "min      3.561000    1.980000   12.600000\n",
+       "25%      5.880000    7.370000   17.400000\n",
+       "50%      6.185000   11.690000   19.100000\n",
+       "75%      6.575000   17.120000   20.200000\n",
+       "max      8.398000   37.970000   22.000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count         $489.00\n",
+       "mean      $454,342.94\n",
+       "std       $165,340.28\n",
+       "min       $105,000.00\n",
+       "10%       $266,700.00\n",
+       "20%       $318,360.00\n",
+       "50%       $438,900.00\n",
+       "80%       $559,440.00\n",
+       "90%       $680,820.00\n",
+       "max     $1,024,800.00\n",
+       "Name: MEDV, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.float_format = '${:,.2f}'.format\n",
+    "prices.describe([.1,.2,.5,.8,.9])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "* Client 1 - $412,324.14\n",
+    "* Client 1 - $412,324.14 - This home is near the median home price of $434,000.00, so we would expect each of the features to be close to the median as well. The teacher ratio is a little better than the median of 19.1. The number of rooms is a little below the median of 6.18 rooms, while the working class percentage of 17 is worse than the median of 11.69. Both of these would have negative impacts on the prices which might explain why the price is a little below the median.\n",
     "\n",
-    "* Client 2 - $234,546.67\n",
+    "* Client 2 - $234,546.67 - This home is below the 10th percentile of home prices, so we would expect each of the features to be in a similar range. The number of rooms is below the 25 percentile of 5.88. Since the other 2 features are inversely coorelated with the price we would want to look at the 75 percentiles instead of 25. Both the working poor percentage and teacher ratio are both worse than the 75 percentile values hence we can see why the price is below the home price at the 75th percentile.\n",
     "\n",
-    "* Client 3 - $914,025.00\n",
+    "* Client 3 - $914,025.00 - This home is near the max price of all home price, so it should have features values that match. The number of rooms is near the max of 8.39. For the other 2 features we need to look at the minimum since there is an inverse coorelation. The teacher ratio is basically the same as the min of 12.6. The working poor percentage of 3 is a little above the min of 1.98 which could explain why the price is slightly less than the max price.\n",
     "\n",
     "These prices match my assumptions about how the 3 features affect the price of a home, so the prices seem very reasonable given the data we received for the 3 features."
    ]
