--- a/dog-breeds/dog_app.ipynb
+++ b/dog-breeds/dog_app.ipynb
@@ -1413,7 +1413,11 @@
     "\n",
     "__Question 6:__ Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.\n",
     "\n",
-    "__Answer:__  It did well at predicting humans vs dogs and if the image was neither. The first dog's breed is misclassified but it correctly predicted the golden retriever. The type of dog the humans look like actually produced some funny results as I expect the first human pic decided poodle based on their hair. It also did well at not predicting the cat was a dog."
+    "__Answer:__  It did well at predicting humans vs dogs and if the image was neither. The first dog's breed is misclassified but it correctly predicted the golden retriever. The first breed was a big difference as a clumber spaniel is a large dog breed and the picture is obviously a very small dog. The type of dog the humans look like actually produced some funny results as I expect the first human pic decided poodle based on their hair. It also did well at not predicting the cat was a dog. Below are 3 possible improvements:\n",
+    "\n",
+    "1. Train with more images of dogs. Including new dog breeds.\n",
+    "2. Augment the images by rotating or shifting them.\n",
+    "3. I could also deepen the convolution layers so that more individual features could be extracted."
    ]
   },
   {
