--- a/titanic-exploration/titanic_survival_exploration.ipynb
+++ b/titanic-exploration/titanic_survival_exploration.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -213,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -367,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -443,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -476,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -540,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -573,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -597,8 +611,7 @@
    },
    "source": [
     "Examining the survival statistics, the majority of males younger than 10 survived the ship sinking, whereas most males age 10 or older *did not survive* the ship sinking. Let's continue to build on our previous prediction: If a passenger was female, then we will predict they survive. If a passenger was male and younger than 10, then we will also predict they survive. Otherwise, we will predict they do not survive.  \n",
-    "Fill in the missing code below so that the function will make this prediction.  \n",
-    "**Hint:** You can start your implementation of this function using the prediction code you wrote earlier from `predictions_1`."
+    "Fill in the missing code below so that the function will make this prediction.  "
    ]
   },
   {
@@ -617,8 +630,6 @@
     "    predictions = []\n",
     "    for _, passenger in data.iterrows():\n",
     "        \n",
-    "        # Remove the 'pass' statement below \n",
-    "        # and write your prediction conditions here\n",
     "        predictions.append(1 if passenger['Sex'] == 'female' or float(passenger['Age']) < 10.0 else 0)\n",
     "    \n",
     "    # Return our predictions\n",
@@ -640,7 +651,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -678,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -718,8 +733,6 @@
     "    predictions = []\n",
     "    for _, passenger in data.iterrows():\n",
     "        \n",
-    "        # Remove the 'pass' statement below \n",
-    "        # and write your prediction conditions here\n",
     "        predictions.append(1 if (passenger['Sex'] == 'female' or float(passenger['Age']) < 10.0) and\n",
     "                           (passenger['Pclass'] != '3' and passenger['SibSp'] < 4) else 0)\n",
     "    \n",
@@ -742,7 +755,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -797,21 +812,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
