--- a/boston-house-prices/boston_housing.ipynb
+++ b/boston-house-prices/boston_housing.ipynb
@@ -8,9 +8,9 @@
     "## Model Evaluation & Validation\n",
     "## Project: Predicting Boston Housing Prices\n",
     "\n",
-    "Welcome to the first project of the Machine Learning Engineer Nanodegree! In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'Implementation'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully!\n",
+    "Welcome to the first project of the Machine Learning Engineer Nanodegree! In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project.  \n",
     "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.  \n",
+    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
     "\n",
     ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut. In addition, Markdown cells can be edited by typically double-clicking the cell to enter edit mode."
    ]
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -90,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -107,19 +111,14 @@
     }
    ],
    "source": [
-    "# TODO: Minimum price of the data\n",
     "minimum_price = np.min(prices)\n",
     "\n",
-    "# TODO: Maximum price of the data\n",
     "maximum_price = np.max(prices)\n",
     "\n",
-    "# TODO: Mean price of the data\n",
     "mean_price = np.mean(prices)\n",
     "\n",
-    "# TODO: Median price of the data\n",
     "median_price = np.median(prices)\n",
     "\n",
-    "# TODO: Standard deviation of prices of the data\n",
     "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
@@ -142,12 +141,7 @@
     "- `'PTRATIO'` is the ratio of students to teachers in primary and secondary schools in the neighborhood.\n",
     "\n",
     "\n",
-    "** Using your intuition, for each of the three features above, do you think that an increase in the value of that feature would lead to an **increase** in the value of `'MEDV'` or a **decrease** in the value of `'MEDV'`? Justify your answer for each.**\n",
-    "\n",
-    "**Hint:** This problem can phrased using examples like below.  \n",
-    "* Would you expect a home that has an `'RM'` value(number of rooms) of 6 be worth more or less than a home that has an `'RM'` value of 7?\n",
-    "* Would you expect a neighborhood that has an `'LSTAT'` value(percent of lower class workers) of 15 have home prices be worth more or less than a neighborhood that has an `'LSTAT'` value of 20?\n",
-    "* Would you expect a neighborhood that has an `'PTRATIO'` value(ratio of students to teachers) of 10 have home prices be worth more or less than a neighborhood that has an `'PTRATIO'` value of 15?"
+    "** Using your intuition, for each of the three features above, do you think that an increase in the value of that feature would lead to an **increase** in the value of `'MEDV'` or a **decrease** in the value of `'MEDV'`? Justify your answer for each.**\n"
    ]
   },
   {
@@ -192,17 +186,14 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Import 'r2_score'\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
     "    \n",
-    "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
     "    score = r2_score(y_true, y_predict)\n",
     "    \n",
-    "    # Return the score\n",
     "    return score"
    ]
   },
@@ -227,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -281,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -292,10 +287,8 @@
     }
    ],
    "source": [
-    "# TODO: Import 'train_test_split'\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# TODO: Shuffle and split the data into training and testing subsets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, prices, test_size=0.2, random_state=24)\n",
     "\n",
     "# Success\n",
@@ -344,6 +337,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -370,10 +364,7 @@
     "### Question 4 - Learning the Data\n",
     "* Choose one of the graphs above and state the maximum depth for the model. \n",
     "* What happens to the score of the training curve as more training points are added? What about the testing curve? \n",
-    "* Would having more training points benefit the model? \n",
-    "\n",
-    "**Hint:** Are the learning curves converging to particular scores? Generally speaking, the more data you have, the better. But if your training and testing curves are converging with a score above your benchmark threshold, would this be necessary?\n",
-    "Think about the pros and cons of adding more training points based on if the training and testing curves are converging."
+    "* Would having more training points benefit the model? \n"
    ]
   },
   {
@@ -396,7 +387,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -419,9 +412,7 @@
    "source": [
     "### Question 5 - Bias-Variance Tradeoff\n",
     "* When the model is trained with a maximum depth of 1, does the model suffer from high bias or from high variance? \n",
-    "* How about when the model is trained with a maximum depth of 10? What visual cues in the graph justify your conclusions?\n",
-    "\n",
-    "**Hint:** High bias is a sign of underfitting(model is not complex enough to pick up the nuances in the data) and high variance is a sign of overfitting(model is by-hearting the data and cannot generalize well). Think about which model(depth 1 or 10) aligns with which part of the tradeoff."
+    "* How about when the model is trained with a maximum depth of 10? What visual cues in the graph justify your conclusions?\n"
    ]
   },
   {
@@ -437,9 +428,7 @@
    "source": [
     "### Question 6 - Best-Guess Optimal Model\n",
     "* Which maximum depth do you think results in a model that best generalizes to unseen data? \n",
-    "* What intuition lead you to this answer?\n",
-    "\n",
-    "** Hint: ** Look at the graph above Question 5 and see where the validation scores lie for the various depths that have been assigned to the model. Does it get better with increased depth? At what point do we get our best validation score without overcomplicating our model? And remember, Occams Razor states \"Among competing hypotheses, the one with the fewest assumptions should be selected.\""
+    "* What intuition lead you to this answer?\n"
    ]
   },
   {
@@ -465,9 +454,7 @@
    "source": [
     "### Question 7 - Grid Search\n",
     "* What is the grid search technique?\n",
-    "* How it can be applied to optimize a learning algorithm?\n",
-    "\n",
-    "** Hint: ** When explaining the Grid Search technique, be sure to touch upon why it is used,  what the 'grid' entails and what the end goal of this method is. To solidify your answer, you can also give an example of a parameter in a model that can be optimized using this approach."
+    "* How it can be applied to optimize a learning algorithm?\n"
    ]
   },
   {
@@ -487,7 +474,6 @@
     "\n",
     "* What benefit does this technique provide for grid search when optimizing a model?\n",
     "\n",
-    "**Hint:** When explaining the k-fold cross validation technique, be sure to touch upon what 'k' is, how the dataset is split into different parts for training and testing and the number of times it is run based on the 'k' value.\n",
     "\n",
     "When thinking about how k-fold cross validation helps grid search, think about the main drawbacks of grid search which are hinged upon **using a particular subset of data for training or testing** and how k-fold cv could help alleviate that. You can refer to the [docs](http://scikit-learn.org/stable/modules/cross_validation.html#cross-validation) for your answer."
    ]
@@ -529,7 +515,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -543,18 +528,16 @@
     "    # sklearn versiin 0.17: ShuffleSplit(n, n_iter=10, test_size=0.1, train_size=None, random_state=None)\n",
     "    cv_sets = ShuffleSplit(n_splits = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
-    "    # TODO: Create a decision tree regressor object\n",
+    "    # Create a decision tree regressor object\n",
     "    regressor = DecisionTreeRegressor()\n",
     "\n",
-    "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
+    "    # Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
     "    params = {'max_depth': range(1,11)}\n",
     "\n",
-    "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
+    "    # Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
-    "    # TODO: Create the grid search cv object --> GridSearchCV()\n",
-    "    # Make sure to include the right parameters in the object:\n",
-    "    # (estimator, param_grid, scoring, cv) which have values 'regressor', 'params', 'scoring_fnc', and 'cv_sets' respectively.\n",
+    "    # Create the grid search cv object --> GridSearchCV()\n",
     "    grid = GridSearchCV(regressor, params, scoring_fnc, cv=cv_sets)\n",
     "\n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
@@ -587,6 +570,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -610,7 +594,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Hint: ** The answer comes from the output of the code snipped above.\n",
     "\n",
     "**Answer: ** The optimal max_depth is 4. I picked 3 from Question 6 which is close but I can see from the curve that max_depth 4 does have a slightly higher validation score compared to 3. The reason I chose 3 was the training and validation curves where closer to converging."
    ]
@@ -631,7 +614,6 @@
     "* What price would you recommend each client sell his/her home at? \n",
     "* Do these prices seem reasonable given the values for the respective features? \n",
     "\n",
-    "**Hint:** Use the statistics you calculated in the **Data Exploration** section to help justify your response.  Of the three clients, client 3 has has the biggest house, in the best public school neighborhood with the lowest poverty level; while client 2 has the smallest house, in a neighborhood with a relatively high poverty rate and not the best public schools.\n",
     "\n",
     "Run the code block below to have your optimized model make predictions for each client's home."
    ]
@@ -639,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -665,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -770,7 +756,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -825,7 +813,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -856,9 +846,9 @@
    "source": [
     "### Question 11 - Applicability\n",
     "\n",
-    "* In a few sentences, discuss whether the constructed model should or should not be used in a real-world setting.  \n",
+    "In a few sentences, discuss whether the constructed model should or should not be used in a real-world setting.  \n",
     "\n",
-    "**Hint:** Take a look at the range in prices as calculated in the code snippet above. Some questions to answering:\n",
+    "\n",
     "- How relevant today is data that was collected from 1978? How important is inflation?\n",
     "- Are the features present in the data sufficient to describe a home? Do you think factors like quality of apppliances in the home, square feet of the plot area, presence of pool or not etc should factor in?\n",
     "- Is the model robust enough to make consistent predictions?\n",
@@ -885,21 +875,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
