--- a/dog-breeds/dog_app.ipynb
+++ b/dog-breeds/dog_app.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'(IMPLEMENTATION)'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully! \n",
+    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. \n",
     "\n",
     "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the iPython Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to  \\n\",\n",
     "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
@@ -20,8 +20,6 @@
     "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
     "\n",
     ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut.  Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "\n",
-    "The rubric contains _optional_ \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. If you decide to pursue the \"Stand Out Suggestions\", you should include the code in this IPython notebook.\n",
     "\n",
     "\n",
     "\n",
@@ -254,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Assess the Human Face Detector\n",
+    "### Assess the Human Face Detector\n",
     "\n",
     "__Question 1:__ Use the code cell below to test the performance of the `face_detector` function.  \n",
     "- What percentage of the first 100 images in `human_files` have a detected human face?  \n",
@@ -284,9 +282,8 @@
    "source": [
     "human_files_short = human_files[:100]\n",
     "dog_files_short = train_files[:100]\n",
-    "# Do NOT modify the code above this line.\n",
     "\n",
-    "## TODO: Test the performance of the face_detector algorithm \n",
+    "## Test the performance of the face_detector algorithm \n",
     "## on the images in human_files_short and dog_files_short.\n",
     "print('Human accuracy: {}%'.format(np.sum([face_detector(ip) for ip in human_files_short])))\n",
     "print('Dog accuracy: {}%'.format(np.sum([face_detector(ip) for ip in dog_files_short])))"
@@ -298,22 +295,7 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__ I think it is reasonable for the experiement we are using but we could attempt to detect humans by features such as arm and legs. But this could also be similar to other bipedal species such as some apes so I think detection of faces might be the best way to classify humans.\n",
-    "\n",
-    "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## (Optional) TODO: Report the performance of another  \n",
-    "## face detection algorithm on the LFW dataset\n",
-    "### Feel free to use as many code cells as needed."
+    "__Answer:__ I think it is reasonable for the experiement we are using but we could attempt to detect humans by features such as arm and legs. But this could also be similar to other bipedal species such as some apes so I think detection of faces might be the best way to classify humans.\n"
    ]
   },
   {
@@ -461,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (IMPLEMENTATION) Assess the Dog Detector\n",
+    "### Assess the Dog Detector\n",
     "\n",
     "__Question 3:__ Use the code cell below to test the performance of your `dog_detector` function.  \n",
     "- What percentage of the images in `human_files_short` have a detected dog?  \n",
@@ -487,7 +469,7 @@
     }
    ],
    "source": [
-    "### TODO: Test the performance of the dog_detector function\n",
+    "### Test the performance of the dog_detector function\n",
     "### on the images in human_files_short and dog_files_short.\n",
     "print('Human accuracy: {}%'.format(np.sum([dog_detector(ip) for ip in human_files_short])))\n",
     "print('Dog accuracy: {}%'.format(np.sum([dog_detector(ip) for ip in dog_files_short])))"
@@ -564,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Model Architecture\n",
+    "### Model Architecture\n",
     "\n",
     "Create a CNN to classify dog breed.  At the end of your code cell block, summarize the layers of your model by executing the line:\n",
     "    \n",
@@ -660,7 +642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Train the Model\n",
+    "### Train the Model\n",
     "\n",
     "Train your model in the code cell below.  Use model checkpointing to save the model that attains the best validation loss.\n",
     "\n",
@@ -710,11 +692,9 @@
    "source": [
     "from keras.callbacks import ModelCheckpoint  \n",
     "\n",
-    "### TODO: specify the number of epochs that you would like to use to train the model.\n",
+    "### specify the number of epochs that you would like to use to train the model.\n",
     "\n",
     "epochs = 5\n",
-    "\n",
-    "### Do NOT modify the code below this line.\n",
     "\n",
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
@@ -1062,7 +1042,7 @@
     "    \n",
     "where `{network}`, in the above filename, can be one of `VGG19`, `Resnet50`, `InceptionV3`, or `Xception`.  Pick one of the above architectures, download the corresponding bottleneck features, and store the downloaded file in the `bottleneck_features/` folder in the repository.\n",
     "\n",
-    "### (IMPLEMENTATION) Obtain Bottleneck Features\n",
+    "###  Obtain Bottleneck Features\n",
     "\n",
     "In the code block below, extract the bottleneck features corresponding to the train, test, and validation sets by running the following:\n",
     "\n",
@@ -1080,7 +1060,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Obtain bottleneck features from another pre-trained CNN.\n",
+    "### Obtain bottleneck features from another pre-trained CNN.\n",
     "bottleneck_features = np.load('bottleneck_features/DogResnet50Data.npz')\n",
     "train_Resnet50 = bottleneck_features['train']\n",
     "valid_Resnet50 = bottleneck_features['valid']\n",
@@ -1091,7 +1071,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Model Architecture\n",
+    "### Model Architecture\n",
     "\n",
     "Create a CNN to classify dog breed.  At the end of your code cell block, summarize the layers of your model by executing the line:\n",
     "    \n",
@@ -1129,7 +1109,7 @@
     }
    ],
    "source": [
-    "### TODO: Define your architecture.\n",
+    "### Define your architecture.\n",
     "Resnet50_model = Sequential()\n",
     "\n",
     "Resnet50_model.add(GlobalAveragePooling2D(input_shape=train_Resnet50.shape[1:]))\n",
@@ -1142,7 +1122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Compile the Model"
+    "### Compile the Model"
    ]
   },
   {
@@ -1153,7 +1133,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Compile the model.\n",
+    "### Compile the model.\n",
     "Resnet50_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])"
    ]
   },
@@ -1161,7 +1141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Train the Model\n",
+    "### Train the Model\n",
     "\n",
     "Train your model in the code cell below.  Use model checkpointing to save the model that attains the best validation loss.  \n",
     "\n",
@@ -1254,7 +1234,7 @@
     }
    ],
    "source": [
-    "### TODO: Train the model.\n",
+    "### Train the model.\n",
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.Resnet50.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
     "\n",
@@ -1267,7 +1247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Load the Model with the Best Validation Loss"
+    "### Load the Model with the Best Validation Loss"
    ]
   },
   {
@@ -1278,7 +1258,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Load the model weights with the best validation loss.\n",
+    "### Load the model weights with the best validation loss.\n",
     "Resnet50_model.load_weights('saved_models/weights.best.Resnet50.hdf5')"
    ]
   },
@@ -1286,7 +1266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Test the Model\n",
+    "### Test the Model\n",
     "\n",
     "Try out your model on the test dataset of dog images. Ensure that your test accuracy is greater than 60%."
    ]
@@ -1307,7 +1287,7 @@
     }
    ],
    "source": [
-    "### TODO: Calculate classification accuracy on the test dataset.\n",
+    "### Calculate classification accuracy on the test dataset.\n",
     "# get index of predicted dog breed for each image in test set\n",
     "Resnet50_predictions = [np.argmax(Resnet50_model.predict(np.expand_dims(feature, axis=0))) for feature in test_Resnet50]\n",
     "\n",
@@ -1320,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (IMPLEMENTATION) Predict Dog Breed with the Model\n",
+    "### Predict Dog Breed with the Model\n",
     "\n",
     "Write a function that takes an image path as input and returns the dog breed (`Affenpinscher`, `Afghan_hound`, etc) that is predicted by your model.  \n",
     "\n",
@@ -1344,7 +1324,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Write a function that takes a path to an image as input\n",
+    "### Write a function that takes a path to an image as input\n",
     "### and returns the dog breed that is predicted by the model.\n",
     "def Resnet50_predict_breed(img_path):\n",
     "    # extract bottleneck features\n",
@@ -1375,7 +1355,7 @@
     "![Sample Human Output](images/sample_human_output.png)\n",
     "\n",
     "\n",
-    "### (IMPLEMENTATION) Write your Algorithm"
+    "### Write your Algorithm"
    ]
   },
   {
@@ -1386,7 +1366,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Write your algorithm.\n",
+    "### Write your algorithm.\n",
     "### Feel free to use as many code cells as needed.\n",
     "def detect_dog_breed(img_path):\n",
     "    if dog_detector(img_path):\n",
@@ -1407,7 +1387,7 @@
     "\n",
     "In this section, you will take your new algorithm for a spin!  What kind of dog does the algorithm think that __you__ look like?  If you have a dog, does it predict your dog's breed accurately?  If you have a cat, does it mistakenly think that your cat is a dog?\n",
     "\n",
-    "### (IMPLEMENTATION) Test Your Algorithm on Sample Images!\n",
+    "### Test Your Algorithm on Sample Images!\n",
     "\n",
     "Test your algorithm at least six images on your computer.  Feel free to use any images you like.  Use at least two human and two dog images.  \n",
     "\n",
@@ -1439,7 +1419,7 @@
     }
    ],
    "source": [
-    "## TODO: Execute your algorithm from Step 6 on\n",
+    "## Execute your algorithm from Step 6 on\n",
     "## at least 6 images on your computer.\n",
     "## Feel free to use as many code cells as needed.\n",
     "import matplotlib.image as mpimg\n",
